# CameraRelocalization

./: BRT_TUM_dataset_visualization.m  CMakeLists.txt  ORBSLAM_output7ScenesPoseFormat.m  PoseTQ2PoseRT.m  README.md  bt_rnd_util.cpp  bt_rnd_util.h  depth_visualization.m  main_bt_rnd_sensor.cpp  ms7ScenesUtil.cpp  ms7ScenesUtil.hpp  package.xml  talker.cpp
